improve implementation + integration test